--- a/platform-docs/src/main/asciidoc/index.adoc
+++ b/platform-docs/src/main/asciidoc/index.adoc
@@ -1,5 +1,5 @@
 = Spring IO Platform Reference Guide
-Andy Wilkinson
+Andy Wilkinson;
 :doctype: book
 :toc:
 :toclevels: 4
@@ -14,10 +14,21 @@ Andy Wilkinson
 :github-repo: spring-io/platform
 :github-raw: http://raw.github.com/{github-repo}/{github-tag}
 :github-code: http://github.com/{github-repo}/tree/{github-tag}
+:github-issues: https://github.com/{github-repo}/issues
 :github-master-code: http://github.com/{github-repo}/tree/master
+:maven-dependency-management: http://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Dependency_Management
+:spring-boot: http://projects.spring.io/spring-boot
+:spring-boot-docs-version: current
+:spring-boot-docs: http://docs.spring.io/spring-boot/docs/{spring-boot-docs-version}/reference/htmlsingle
+:spring-boot-docs-maven: {spring-boot-docs}/#using-boot-maven
+:spring-boot-docs-maven-plugin: {spring-boot-docs}/#build-tool-plugins-maven-plugin
+:spring-boot-docs-gradle-plugin: {spring-boot-docs}/#build-tool-plugins-gradle-plugin
+:spring-boot-version: 1.0.0.M1
 
 // ======================================================================================
 
-= Spring IO Platform
+include::documentation-overview.adoc[]
+include::getting-started.adoc[]
+include::appendix.adoc[]
 
 // ======================================================================================
