Rename modules: platform -> platform-bom and platform-docs -> platform
Rename the platform artifact to platform-bom to better describe what
it is; it's the platform's bill of materials. Also renamed
platform-docs to platform. This is the artifact that represents the
Platform as a whole. All it does at the moment is publish the
Platform's docs but this may expand in the future.

--- a/platform/src/main/asciidoc/appendix-dependency-versions.adoc
+++ b/platform/src/main/asciidoc/appendix-dependency-versions.adoc
@@ -1,7 +1,7 @@
 [appendix]
 [[appendix-dependency-versions]]
 == Dependency versions
-The table below provides details of all of the artifacts that are part of Spring IO platform.
+The table below provides details of all of the artifacts that are part of Spring IO Platform.
 When you declare a dependency on one of these artifacts without declaring a version, the version
 that is listed in the table will be used.
 
