Build on top of the new separate Platform Foundation bom
This commit updates the main Spring IO Platform to split out the
Platform's Foundation and start building on top of it.

This change does not affect existing users of the Platform as the
Platform's bom and the Platform's versions properties file are both
still published with the same dependency management at the same Maven
coordinates. However, the properties file published by
platform-versions should now be considered deprecated and the
properties file published by platform-bom should be used instead.
The intention is to stop publishing the platform-versions properties
artifact in the 2.0 release of the Platform.

--- a/platform/src/main/asciidoc/getting-started.adoc
+++ b/platform/src/main/asciidoc/getting-started.adoc
@@ -202,7 +202,7 @@ your application.
 
 To use Spring Boot's Gradle plugin to provide version management, you configure your build to
 apply the plugin and, in the `versionManagement` configuration that it provides, declare a
-dependency on the Platform's `platform-versions` artifact:
+dependency on the Platform's `platform-bom` artifact:
 
 [source,groovy,indent=0,subs="verbatim,attributes"]
 ----
@@ -234,7 +234,7 @@ endif::[]
 	}
 
 	dependencies {
-		versionManagement 'io.spring.platform:platform-versions:{platform-version}@properties'
+		versionManagement 'io.spring.platform:platform-bom:{platform-version}@properties'
 	}
 ----
 
