--- a/platform/src/main/asciidoc/index.adoc
+++ b/platform/src/main/asciidoc/index.adoc
@@ -27,6 +27,7 @@ Andy Wilkinson;
 
 include::documentation-overview.adoc[]
 include::getting-started.adoc[]
+include::upgrading.adoc[]
 include::appendix.adoc[]
 
 // ======================================================================================
