Close dependency tag correctly in Maven pom snippet
Fixes #33

--- a/platform/src/main/asciidoc/getting-started.adoc
+++ b/platform/src/main/asciidoc/getting-started.adoc
@@ -185,7 +185,7 @@ version number. For example:
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-		<dependency>
+		</dependency>
 	</dependencies>
 ----
 
