--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -32,3 +32,10 @@ should start using the properties file published by `platform-bom` instead:
 
 As of Spring IO Platform 1.1, the dependency management for `net.sf.ehcache:ehcache-core` is
 deprecated with `net.sf.ehcache:ehcache` being its preferred replacement.
+
+=== org.glassfish.tyrus:tyrus-websocket-core
+
+Spring IO Platform 1.1 upgraded to Tyrus 1.3.5 (from 1.2.1) where the `tyrus-websocket-core`
+module no longer exists. Dependency management for `org.glassfish.tyrus:tyrus-websocket-core`
+remains at version 1.2.1 but it is deprecated and applications should be updated to use the
+repackaged 1.3.5 modules instead.
