--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -8,18 +8,17 @@ This section provides all you need to know about upgrading to this version of Sp
 
 
 
-[[upgrading-deprecation]]
-== Deprecation
+[[upgrading-removal]]
+== Removal of previously deprecated components
 
-A number of the Platform's components have been deprecated and will be removed in a future release.
-New applications should not use the deprecated components and, to ensure a smooth migration path to
-future releases of the Platform, existing applications should be updated.
+A number of the Platform's components that were deprecated in earlier releases have now been
+removed.
 
 === platform-versions artifact
 
-As of Spring IO Platform 1.1, the `platform-versions` properties artifact is deprecated. Maven
-users are unaffected by this change. If, however, you're using the Platform with Gradle, then you
-should start using the properties file published by `platform-bom` instead:
+The `platform-versions` properties artifact has been removed. Maven users are unaffected by this
+change. If, however, you're using the Platform with Gradle, then you must use the properties file
+published by `platform-bom` instead:
 
 [source,groovy,indent=0,subs="verbatim,attributes"]
 ----
@@ -28,14 +27,12 @@ should start using the properties file published by `platform-bom` instead:
 	}
 ----
 
-=== net.sf.ehcache:ehcache-core
-
-As of Spring IO Platform 1.1, the dependency management for `net.sf.ehcache:ehcache-core` is
-deprecated with `net.sf.ehcache:ehcache` being its preferred replacement.
-
 === org.glassfish.tyrus:tyrus-websocket-core
 
-Spring IO Platform 1.1 upgraded to Tyrus 1.3.5 (from 1.2.1) where the `tyrus-websocket-core`
-module no longer exists. Dependency management for `org.glassfish.tyrus:tyrus-websocket-core`
-remains at version 1.2.1 but it is deprecated and applications should be updated to use the
-repackaged 1.3.5 modules instead.
+Dependency management for `org.glassfish.tyrus:tyrus-websocket-core` has been removed. It does
+not exist in the version of Tyrus that is used by the Platform.
+
+=== org.igniterealtime.smack:smackx
+
+Dependency management for `org.igniterealtime.smack:smackx` has been removed. It does not exist in
+the version of Smack that is used by the Platform.
