--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -33,6 +33,11 @@ should start using the properties file published by `platform-bom` instead:
 As of Spring IO Platform 1.1, the dependency management for `net.sf.ehcache:ehcache-core` is
 deprecated with `net.sf.ehcache:ehcache` being its preferred replacement.
 
+=== org.apache.cassandra:cassandra-all
+
+As of Spring IO Platform 1.1, the dependency management for `org.apache.cassandra:cassandra-all`
+is deprecated.
+
 === org.glassfish.tyrus:tyrus-websocket-core
 
 Spring IO Platform 1.1 upgraded to Tyrus 1.3.5 (from 1.2.1) where the `tyrus-websocket-core`
