--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -71,3 +71,8 @@ Spring IO Platform 1.1 upgraded to Tyrus 1.3.5 (from 1.2.1) where the `tyrus-web
 module no longer exists. Dependency management for `org.glassfish.tyrus:tyrus-websocket-core`
 remains at version 1.2.1 but it is deprecated and applications should be updated to use the
 repackaged 1.3.5 modules instead.
+
+=== org.neo4j:neo4j-graph-collections
+
+As of Spring IO Platform 1.1., the dependency management for `org.neo4j:neo4j-graph-collections`
+is deprecated.
