--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -65,6 +65,12 @@ deprecated with `net.sf.ehcache:ehcache` being its preferred replacement.
 As of Spring IO Platform 1.1, the dependency management for `org.apache.cassandra:cassandra-all`
 is deprecated.
 
+=== org.apache.tomcat:tomcat7-websocket
+
+As of Spring IO Platform 1.1, the dependency management for `org.apache.tomcat:tomcat7-websocket`
+is deprecated. Spring IO Platform 2.0 will move to Tomcat 8 at which time the
+`org.apache.tomcat:tomcat-websocket` dependency should be used instead.
+
 === org.glassfish.tyrus:tyrus-websocket-core
 
 Spring IO Platform 1.1 upgraded to Tyrus 1.3.5 (from 1.2.1) where the `tyrus-websocket-core`
