Recommend the use of the Gradle dependency management plugin
Closes #121

--- a/platform/src/main/asciidoc/index.adoc
+++ b/platform/src/main/asciidoc/index.adoc
@@ -8,6 +8,8 @@ Andy Wilkinson;
 :icons: font
 :platform-repo: snapshot
 :github-tag: master
+:dependency-management-plugin: https://plugins.gradle.org/plugin/io.spring.dependency-management
+:dependency-management-plugin-version: 0.3.0.RELEASE
 :platform-docs-version: current
 :platform-docs: http://docs.spring.io/platform/docs/{platform-docs-version}/reference
 :platform-docs-current: http://docs.spring.io/platform/docs/current/reference
@@ -21,7 +23,6 @@ Andy Wilkinson;
 :spring-boot-docs: http://docs.spring.io/spring-boot/docs/{spring-boot-version}/reference/htmlsingle
 :spring-boot-docs-maven: {spring-boot-docs}/#using-boot-maven
 :spring-boot-docs-maven-plugin: {spring-boot-docs}/#build-tool-plugins-maven-plugin
-:spring-boot-docs-gradle-plugin: {spring-boot-docs}/#build-tool-plugins-gradle-plugin
 
 // ======================================================================================
 
