Document the Platform's release cycle
Closes gh-48

--- a/platform/src/main/asciidoc/index.adoc
+++ b/platform/src/main/asciidoc/index.adoc
@@ -28,6 +28,7 @@ Andy Wilkinson;
 
 include::documentation-overview.adoc[]
 include::getting-started.adoc[]
+include::release-cycle.adoc[]
 include::appendix.adoc[]
 
 // ======================================================================================
