--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -77,6 +77,11 @@ As of Spring IO Platform 1.1, the dependency management for `org.apache.tomcat:t
 is deprecated. Spring IO Platform 2.0 will move to Tomcat 8 at which time the
 `org.apache.tomcat:tomcat-websocket` dependency should be used instead.
 
+=== org.eclipse.paho:mqtt-client
+
+As of Spring IO Platform 1.1, the dependency management for `org.eclipse.paho:mqtt-client` is
+deprecated with `org.eclipse.paho:org.eclipse.paho.client.mqttv3` being its preferred replacement.
+
 === org.glassfish.tyrus:tyrus-websocket-core
 
 Spring IO Platform 1.1 upgraded to Tyrus 1.3.5 (from 1.2.1) where the `tyrus-websocket-core`
