Document the approach for adding dependencies to the Platform
Closes gh-61

--- a/platform/src/main/asciidoc/index.adoc
+++ b/platform/src/main/asciidoc/index.adoc
@@ -29,7 +29,7 @@ Andy Wilkinson;
 include::documentation-overview.adoc[]
 include::getting-started.adoc[]
 include::upgrading.adoc[]
-include::release-cycle.adoc[]
+include::maintenance.adoc[]
 include::appendix.adoc[]
 
 // ======================================================================================
